<resources>
    <string name="login">Login</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="this_field_is_required">This field is required!</string>
    <string name="action_new">Add</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_logout">Logout</string>
    <string name="app_name">To-do List</string>
    <string name="what_needs">What needs to be done?</string>
    <string name="Done">Done</string>
    <string name="add_todo">Add Todo</string>
</resources>
