<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTodo">

    <EditText
        android:id="@+id/content_et"
        android:hint="@string/what_needs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></EditText>

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/done_cb"
        android:text="@string/Done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/content_et"></androidx.appcompat.widget.AppCompatCheckBox>

    <Button
        android:id="@+id/save_btn"
        android:text="@string/add_todo"
        android:padding="30dp"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/done_cb"></Button>
</RelativeLayout>