<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/username_et"
        android:hint="@string/enter_your_username"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/password_et"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/Login_btn"
        android:text="@string/login"
        android:layout_marginTop="50dp"
        android:background="@drawable/todo_button_selector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>